mds: do not scrub inode if it is purging

Scrub could evaluate strays but there was a race condition where
an inode pinned for scrub would land for purging which would indeed
lead to crashes.

Fixes: https://tracker.ceph.com/issues/51824
Signed-off-by: Dhairya Parmar <dparmar@redhat.com>
(cherry picked from commit a8680d37821854fb6d8685db85bdf2b658f12981)